AWE/src/objects/Advance_Workflow__c.object
<CustomObject>
    <description>This object holds the definition of the workflows for standard and custom objects</description>
    <fields>
        <fullName>Advance_Rule_Stamp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance Rule Stamp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountRulesassociatedtoAdvanceWorkflow__c</fullName>
        <label>#of Rules associated to Advance Workflow</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Holds the description of the Workflow</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advance Workflow doesn&apos;t trigger rule execution until you activate it. To activate a workflow rule, click Enable on the workflow rule detail page. Click Deactivate to prevent  Advance Workflow rules associated to an object  from triggering</description>
        <inlineHelpText>Advance Workflow doesn&apos;t trigger rule execution until you activate it. To activate a workflow rule, click Enable on the workflow rule detail page. Click Deactivate to prevent  Advance Workflow rules associated to an object  from triggering</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Captures the Object Name ( Standard or Custom ) for which the advance workflow is created</description>
        <inlineHelpText>Captures the Object Name ( Standard or Custom ) for which the advance workflow is created</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Log_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If flag is  on AWE captures run time details on system methods and values involved. To set the flag on Click the Apex log switch button to initiate activation or deactivation</inlineHelpText>
        <label>Apex Log is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Advance Workflow</label>
    <nameField>
        <label>Advance Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advance Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_Rule_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (ISNEW() ||  ISCHANGED(Name)) &amp;&amp; Name =  VLOOKUP( $ObjectType.Advance_Workflow__c.Fields.Name ,  $ObjectType.Advance_Workflow__c.Fields.Name , Name),true,false )</errorConditionFormula>
        <errorMessage>Advance Workflow Name  must be Unique</errorMessage>
    </validationRules>
</CustomObject>